--- a/CreatureMR/LethalCreatureMR.csproj
+++ b/CreatureMR/LethalCreatureMR.csproj
@@ -21,9 +21,11 @@
   <!-- Replace mbundle with the Asset Bundle Name from your unity project -->
   <ItemGroup>
     <None Remove="lecreature" />
+    <None Remove="lecreature.manifest" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="lecreature" />
+    <EmbeddedResource Include="lecreature.manifest" />
   </ItemGroup>
   
   <ItemGroup>
@@ -35,16 +37,13 @@
     <PackageReference Include="UnityEngine.Modules" Version="2022.3.9" IncludeAssets="compile" />
     <PackageReference Include="HarmonyX" Version="2.10.2" IncludeAssets="compile" />
   </ItemGroup>
-  <!-- Uncomment this section ande delete the ModeReplacementAPI.dll reference if you plan on cloning ModeReplacementAPI alongside your mod
-  <ItemGroup>
-    <ProjectReference Include="..\ModelReplacementAPI\ModelReplacementAPI.csproj" />
-  </ItemGroup>-->
+  
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\..\..\Games (x86)\Steam\steamapps\common\Lethal Company\Lethal Company_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="ModelReplacementAPI">
-      <HintPath>ModelReplacementAPI.dll</HintPath>
+      <HintPath>API\ModelReplacementAPI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.InputSystem">
       <HintPath>..\..\..\..\..\..\Games (x86)\Steam\steamapps\common\Lethal Company\Lethal Company_Data\Managed\Unity.InputSystem.dll</HintPath>
@@ -59,6 +58,10 @@
       <HintPath>..\..\..\..\..\..\Games (x86)\Steam\steamapps\common\Lethal Company\Lethal Company_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <!-- Uncomment this section ande delete the ModeReplacementAPI.dll reference if you plan on cloning ModeReplacementAPI alongside your mod
+  <ItemGroup>
+    <ProjectReference Include="..\ModelReplacementAPI\ModelReplacementAPI.csproj" />
+  </ItemGroup>-->
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="copy /Y &quot;$(TargetDir)$(ProjectName).dll&quot; &quot;$(ProjDir)Build&quot;  &#xD;&#xA;" />
